[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/player/Ship.gd" type="Script" id=1]
[ext_resource path="res://assets/3d/kenney/vehicles/craft_speederA.obj" type="ArrayMesh" id=2]
[ext_resource path="res://src/player/Trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/player/ShipBody.gd" type="Script" id=4]
[ext_resource path="res://assets/3d/kenney/guns/weapon_rifle.obj" type="ArrayMesh" id=5]
[ext_resource path="res://assets/3d/textures/crosshair.png" type="Texture" id=6]
[ext_resource path="res://src/player/ui/UINode.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/3d/aim_area.obj" type="ArrayMesh" id=8]

[sub_resource type="SphereMesh" id=1]
radius = 0.2
height = 0.4

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Camera/UIViewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
vertex_color_use_as_albedo = true
albedo_texture = SubResource( 2 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 1.28, 0.72 )

[sub_resource type="ConvexPolygonShape" id=12]
points = PoolVector3Array( -1.07835, 33.2, -1.07835, 1.07835, 33.2, -1.07835, -1.07835, 33.2, 1.07835, 1.07835, 33.2, 1.07835, 1.07835, 33.2, 1.07835, 4.7, 0.3, 4.7, -1.07835, 33.2, 1.07835, -4.7, 0.3, 4.7, -1.07835, 33.2, 1.07835, -4.7, 0.3, 4.7, -1.07835, 33.2, -1.07835, -4.7, 0.3, -4.7, 4.7, 0.3, -4.7, -4.7, 0.3, -4.7, 4.7, 0.3, 4.7, -4.7, 0.3, 4.7, 1.07835, 33.2, -1.07835, 4.7, 0.3, -4.7, 1.07835, 33.2, 1.07835, 4.7, 0.3, 4.7, -1.07835, 33.2, -1.07835, -4.7, 0.3, -4.7, 1.07835, 33.2, -1.07835, 4.7, 0.3, -4.7 )

[sub_resource type="ConvexPolygonShape" id=7]
points = PoolVector3Array( 1, 0.2, -0.35, 0.5, 0.283333, -0.65, 1, 0.2, -0.65, 0.4, 0.3, 0.0499999, 0.4, 0.3, -0.65, 0.4, 0.3, -0.15, 0.3, 0.1, -1.05, 0.2, 8.14557e-10, -1.05, 0.5, 8.14557e-10, -1.05, 0.2, 0.5, -1.05, 0.3, 0.4, -1.05, 0.4, 0.4, -1.05, 0.4, 0.1, -1.05, 0.5, 0.5, -1.05, 0.3, 0.3, 0.0499999, 0.4, 0.3, -0.15, 0.4, 0.3, 0.0499999, 0.2, 0.3, -0.0499999, 0.25, 0.3, 0.25, 0.2, 0.3, 0.25, 0.3, 0.3, 0.15, -0.4, 0.1, -1.05, -0.5, 8.14614e-10, -1.05, -0.2, 8.14614e-10, -1.05, -0.5, 0.5, -1.05, -0.4, 0.4, -1.05, -0.3, 0.4, -1.05, -0.3, 0.1, -1.05, -0.2, 0.5, -1.05, -0.3, 0.3, 0.0499999, -0.2, 0.3, -0.0499999, -0.2, 0.3, 0.25, -0.4, 0.3, -0.15, -0.25, 0.3, 0.25, -0.4, 0.3, 0.0499999, -0.3, 0.3, 0.15, -0.4, 0.3, -0.15, -0.5, 0.283333, -0.65, -0.4, 0.3, -0.65, -0.4, 0.3, 0.0499999, -1, 0.2, -0.35, -1, 0.2, -0.65, 0.3, 0.1, 0.0499999, -0.3, 0.1, 0.249504, 0.3, 0.1, 0.249504, 0.2, 0.1, 0.0499999, -0.2, 0.1, 0.0499999, -0.2, 0.1, -0.35, -0.3, 0.1, 0.0499999, -0.5, 0.1, -0.65, -0.2, 0.1, -0.65, -0.4, 0.1, 0.0499999, -1, 0.1, -0.35, -1, 0.1, -0.65, 0.2, 0.1, -0.65, 0.4, 0.1, 0.0499999, 0.5, 0.1, -0.65, 1, 0.1, -0.65, 1, 0.1, -0.35, 0.2, 0.1, -0.35, -0.3, 0.2, 0.25, -0.2, 0.2, 0.25, -0.2, 0.304975, 1.05, -0.25, 0.2, 0.25, 0.2, 0.304975, 1.05, 0.25, 0.2, 0.25, 0.3, 0.2, 0.25, 0.2, 0.2, 0.25, -0.3, 0.2, 0.15, -0.3, 0.1, 0.249504, -0.3, 0.1, 0.0499999, -0.3, 0.2, 0.25, -0.3, 0.3, 0.15, -0.3, 0.3, 0.0499999, -0.2, 0.304975, 1.05, 0.2, 0.20995, 1.05, -0.2, 0.20995, 1.05, 0.2, 0.304975, 1.05, -0.3, 0.1, 0.249504, 0.2, 0.20995, 1.05, 0.3, 0.1, 0.249504, -0.2, 0.20995, 1.05, 0.3, 0.2, 0.15, 0.3, 0.3, 0.15, 0.3, 0.3, 0.0499999, 0.3, 0.1, 0.249504, 0.3, 0.1, 0.0499999, 0.3, 0.2, 0.25, -0.3, 0.2, 0.25, -0.2, 0.20995, 1.05, -0.3, 0.1, 0.249504, -0.2, 0.304975, 1.05, 0.3, 0.2, 0.25, 0.25, 0.2, 0.25, 0.3, 0.2, 0.15, 0.25, 0.2, 0.25, 0.3, 0.3, 0.15, 0.3, 0.2, 0.15, 0.25, 0.3, 0.25, 0.2, 0.2, 0.25, 0.25, 0.3, 0.25, 0.25, 0.2, 0.25, 0.2, 0.3, 0.25, 0.2, 0.20995, 1.05, 0.3, 0.2, 0.25, 0.3, 0.1, 0.249504, 0.2, 0.304975, 1.05, -0.25, 0.2, 0.25, -0.3, 0.2, 0.25, -0.3, 0.2, 0.15, -0.25, 0.3, 0.25, -0.2, 0.2, 0.25, -0.25, 0.2, 0.25, -0.2, 0.3, 0.25, -0.3, 0.3, 0.15, -0.25, 0.2, 0.25, -0.3, 0.2, 0.15, -0.25, 0.3, 0.25, 1, 0.1, -0.65, 1, 0.2, -0.35, 1, 0.2, -0.65, 1, 0.1, -0.35, 0.4, 0.1, 0.0499999, 1, 0.2, -0.35, 1, 0.1, -0.35, 0.4, 0.3, 0.0499999, 1, 0.2, -0.65, 0.5, 0.1, -0.65, 1, 0.1, -0.65, 0.5, 0.283333, -0.65, 0.255, 0.4, -0.35, 0.2, 0.4, -0.65, 0.255, 0.4, -0.65, 0.2, 0.4, -0.0499999, 0.2, 0.4, -0.35, 0.4, 0.4, -0.15, 0.4, 0.4, -0.35, 0.4, 0.4, -0.65, 0.36375, 0.65, -0.6, 0.36375, 0.65, -0.75, 0.4, 0.4, -0.35, 0.4, 0.3, -0.65, 0.4, 0.4, -0.35, 0.4, 0.4, -0.65, 0.4, 0.3, -0.15, 0.4, 0.4, -0.15, 0.36375, 0.65, -0.6, 0.29125, 0.65, -0.75, 0.36375, 0.65, -0.75, 0.29125, 0.65, -0.6, 0.29125, 0.65, -0.6, 0.255, 0.4, -0.65, 0.29125, 0.65, -0.75, 0.255, 0.4, -0.35, 0.4, 0.4, -0.65, 0.29125, 0.65, -0.75, 0.255, 0.4, -0.65, 0.36375, 0.65, -0.75, 0.255, 0.4, -0.35, 0.36375, 0.65, -0.6, 0.4, 0.4, -0.35, 0.29125, 0.65, -0.6, -0.2, 0.7, 0.0499999, -0.0499999, 0.7, -0.35, -0.0499999, 0.7, 0.0499999, -0.2, 0.7, -0.35, 0.2, 0.7, 0.0499999, 0.0499999, 0.7, -0.35, 0.2, 0.7, -0.35, 0.0499999, 0.7, 0.0499999, -0.2, 0.4, -0.35, -0.255, 0.4, -0.65, -0.2, 0.4, -0.65, -0.2, 0.4, -0.0499999, -0.255, 0.4, -0.35, -0.4, 0.4, -0.15, -0.4, 0.4, -0.35, -0.4, 0.4, -0.35, -0.29125, 0.65, -0.6, -0.255, 0.4, -0.35, -0.36375, 0.65, -0.6, -0.4, 0.4, -0.65, -0.4, 0.3, -0.15, -0.4, 0.3, -0.65, -0.4, 0.4, -0.35, -0.4, 0.4, -0.15, -0.36375, 0.65, -0.6, -0.4, 0.4, -0.65, -0.36375, 0.65, -0.75, -0.4, 0.4, -0.35, -0.255, 0.4, -0.65, -0.29125, 0.65, -0.6, -0.29125, 0.65, -0.75, -0.255, 0.4, -0.35, -0.29125, 0.65, -0.6, -0.36375, 0.65, -0.75, -0.29125, 0.65, -0.75, -0.36375, 0.65, -0.6, -0.255, 0.4, -0.65, -0.36375, 0.65, -0.75, -0.4, 0.4, -0.65, -0.29125, 0.65, -0.75, -1, 0.2, -0.65, -1, 0.1, -0.35, -1, 0.1, -0.65, -1, 0.2, -0.35, -1, 0.2, -0.35, -0.4, 0.1, 0.0499999, -1, 0.1, -0.35, -0.4, 0.3, 0.0499999, -0.5, 0.1, -0.65, -1, 0.2, -0.65, -1, 0.1, -0.65, -0.5, 0.283333, -0.65, 0.2, 0.4, -0.35, 0.2, 0.7, 0.0499999, 0.2, 0.7, -0.35, 0.2, 0.4, -0.0499999, 0.2, 0.4, 1.05, 0.15, 0.685633, 0.0978913, 0.2, 0.7, 0.0499999, 0.2, 0.4, 1.05, 0.0499999, 0.7, 0.0499999, -0.15, 0.685633, 0.0978913, -0.0499999, 0.7, 0.0499999, -0.2, 0.7, 0.0499999, -0.15, 0.414367, 1.00211, 0.15, 0.414367, 1.00211, -0.2, 0.4, 1.05, -0.2, 0.7, -0.35, -0.2, 0.4, -0.0499999, -0.2, 0.4, -0.35, -0.2, 0.7, 0.0499999, -0.2, 0.4, 1.05, 0.3, 0.1, 0.0499999, 0.4, 0.3, 0.0499999, 0.4, 0.1, 0.0499999, 0.3, 0.3, 0.0499999, -0.4, 0.1, 0.0499999, -0.3, 0.3, 0.0499999, -0.3, 0.1, 0.0499999, -0.4, 0.3, 0.0499999, -0.2, 0.1, -0.35, -0.2, 0.1, 0.0499999, -0.2, 0, -0.35, 0.2, 0, -0.35, 0.2, 0.1, 0.0499999, 0.2, 0.1, -0.35, 0.2, 0, -0.35, -0.2, 0.1, 0.0499999, 0.2, 0.1, 0.0499999, 4.88758e-06, 0, -0.35, -0.2, 0, -0.35, 0.3, 0.1, -1.05, 0.3, 0.4, -0.85, 0.3, 0.4, -1.05, 0.3, 0.1, -0.85, 0.4, 0.1, -0.85, 0.3, 0.1, -1.05, 0.4, 0.1, -1.05, 0.3, 0.1, -0.85, 0.4, 0.1, -0.85, 0.3, 0.4, -0.85, 0.3, 0.1, -0.85, 0.4, 0.4, -0.85, 0.4, 0.4, -1.05, 0.3, 0.4, -0.85, 0.4, 0.4, -0.85, 0.3, 0.4, -1.05, 0.4, 0.4, -1.05, 0.4, 0.1, -0.85, 0.4, 0.1, -1.05, 0.4, 0.4, -0.85, -0.3, 0.1, -0.85, -0.4, 0.4, -0.85, -0.4, 0.1, -0.85, -0.3, 0.4, -0.85, -0.3, 0.4, -1.05, -0.4, 0.4, -0.85, -0.3, 0.4, -0.85, -0.4, 0.4, -1.05, -0.4, 0.1, -1.05, -0.4, 0.4, -0.85, -0.4, 0.4, -1.05, -0.4, 0.1, -0.85, -0.3, 0.4, -1.05, -0.3, 0.1, -0.85, -0.3, 0.1, -1.05, -0.3, 0.4, -0.85, -0.3, 0.1, -0.85, -0.4, 0.1, -1.05, -0.3, 0.1, -1.05, -0.4, 0.1, -0.85, -0.15, 0.414367, 1.00211, 0.0499999, 0.7, 0.35, 0.15, 0.414367, 1.00211, -0.0499999, 0.7, 0.35, 0.15, 0.414367, 1.00211, 0.0499999, 0.7, 0.35, 0.15, 0.685633, 0.0978913, -0.0499999, 0.7, 0.35, -0.15, 0.414367, 1.00211, -0.15, 0.685633, 0.0978913, 0.0499999, 0.7, 0.35, -0.15, 0.685633, 0.0978913, 0.15, 0.685633, 0.0978913, -0.0499999, 0.7, 0.35, 0.5, 0.5, -0.95, 0.2, 0.5, -1.05, 0.5, 0.5, -1.05, 0.2, 0.5, -0.95, 0.5, 0.4, -0.65, 0.2, 0.5, -0.95, 0.5, 0.5, -0.95, 0.4, 0.4, -0.65, 0.255, 0.4, -0.65, 0.2, 0.4, -0.65, 0.2, 0.466667, -0.85, 0.5, 8.14557e-10, -0.65, 0.5, 0.5, -1.05, 0.5, 8.14557e-10, -1.05, 0.5, 0.5, -0.95, 0.5, 0.4, -0.65, 0.5, 0.1, -0.65, 0.5, 0.283333, -0.65, 0.4, 0.3, -0.65, 0.5, 0.4, -0.65, 0.5, 0.283333, -0.65, 0.4, 0.4, -0.65, 0.2, 0.3, -0.0499999, 0.4, 0.4, -0.15, 0.4, 0.3, -0.15, 0.2, 0.4, -0.0499999, 0.2, 0.5, -1.05, 0.2, 8.14557e-10, -0.85, 0.2, 8.14557e-10, -1.05, 0.2, 0.5, -0.95, 0.2, 0.466667, -0.85, 0.2, 8.14557e-10, -0.85, -0.2, 0.466667, -0.85, -0.2, 8.14557e-10, -0.85, 0.2, 0.466667, -0.85, 0.2, 0.6, -0.85, -0.2, 0.6, -0.85, 0.2, 0.7, -0.35, -0.2, 0.6, -0.85, 0.2, 0.6, -0.85, 0.0499999, 0.7, -0.35, 1.00136e-05, 0.7, -0.35, -0.0499999, 0.7, -0.35, -0.2, 0.7, -0.35, 0.2, 0.466667, -0.85, 0.2, 0.7, -0.35, 0.2, 0.6, -0.85, 0.2, 0.4, -0.65, 0.2, 0.4, -0.35, 0.0499999, 0.7, 0.0499999, 0.0499999, 0.8, -0.35, 0.0499999, 0.7, -0.35, 0.0499999, 0.8, -0.0499999, 0.0499999, 0.75, 0.0499999, 0.0499999, 0.8, -0.35, 1.00136e-05, 0.7, -0.35, 0.0499999, 0.7, -0.35, -0.0499999, 0.7, -0.35, -0.0499999, 0.8, -0.35, -0.0499999, 0.75, 0.0499999, 0.0499999, 0.8, -0.0499999, 0.0499999, 0.75, 0.0499999, -0.0499999, 0.8, -0.0499999, -0.0499999, 0.7, 0.0499999, 0.0499999, 0.75, 0.0499999, 0.0499999, 0.7, 0.0499999, -0.0499999, 0.75, 0.0499999, -0.0499999, 0.8, -0.0499999, 0.0499999, 0.8, -0.35, 0.0499999, 0.8, -0.0499999, -0.0499999, 0.8, -0.35, -0.0499999, 0.8, -0.35, -0.0499999, 0.7, 0.0499999, -0.0499999, 0.7, -0.35, -0.0499999, 0.8, -0.0499999, -0.0499999, 0.75, 0.0499999, -0.2, 8.14557e-10, -0.85, -0.2, 0.5, -1.05, -0.2, 8.14614e-10, -1.05, -0.2, 0.5, -0.95, -0.2, 0.466667, -0.85, -0.5, 0.5, -1.05, -0.5, 8.14614e-10, -0.65, -0.5, 8.14614e-10, -1.05, -0.5, 0.5, -0.95, -0.5, 0.4, -0.65, -0.5, 0.1, -0.65, -0.5, 0.283333, -0.65, -0.2, 0.466667, -0.85, -0.5, 0.5, -0.95, -0.2, 0.5, -0.95, -0.2, 0.4, -0.65, -0.255, 0.4, -0.65, -0.4, 0.4, -0.65, -0.5, 0.4, -0.65, -0.2, 0.5, -0.95, -0.5, 0.5, -1.05, -0.2, 0.5, -1.05, -0.5, 0.5, -0.95, -0.2, 0.6, -0.85, -0.2, 0.4, -0.65, -0.2, 0.466667, -0.85, -0.2, 0.7, -0.35, -0.2, 0.4, -0.35, -0.4, 0.3, -0.15, -0.2, 0.4, -0.0499999, -0.2, 0.3, -0.0499999, -0.4, 0.4, -0.15, -0.5, 0.4, -0.65, -0.4, 0.3, -0.65, -0.5, 0.283333, -0.65, -0.4, 0.4, -0.65, -0.2, 0.304975, 1.05, 0.2, 0.4, 1.05, 0.2, 0.304975, 1.05, -0.2, 0.4, 1.05, 0.2, 0.3, -0.0499999, 0.2, 0.4, 1.05, 0.2, 0.4, -0.0499999, 0.2, 0.3, 0.25, 0.2, 0.304975, 1.05, 0.2, 0.2, 0.25, -0.2, 0.3, 0.25, -0.2, 0.304975, 1.05, -0.2, 0.2, 0.25, -0.2, 0.4, 1.05, -0.2, 0.3, -0.0499999, -0.2, 0.4, -0.0499999, 0.2, 8.14557e-10, -0.65, 4.88758e-06, 0, -0.35, 0.2, 0, -0.35, -0.2, 8.14557e-10, -0.85, 0.2, 8.14557e-10, -0.85, 0.2, 8.14557e-10, -1.05, 0.5, 8.14557e-10, -1.05, 0.5, 8.14557e-10, -0.65, -0.2, 8.14557e-10, -0.65, -0.2, 0, -0.35, -0.5, 8.14614e-10, -0.65, -0.5, 8.14614e-10, -1.05, -0.2, 8.14614e-10, -1.05, -0.2, 0.1, -0.65, -0.2, 0, -0.35, -0.2, 8.14557e-10, -0.65, -0.2, 0.1, -0.35, -0.5, 8.14614e-10, -0.65, -0.2, 0.1, -0.65, -0.2, 8.14557e-10, -0.65, -0.5, 0.1, -0.65, 0.2, 0.1, -0.65, 0.5, 8.14557e-10, -0.65, 0.2, 8.14557e-10, -0.65, 0.5, 0.1, -0.65, 0.2, 0, -0.35, 0.2, 0.1, -0.65, 0.2, 8.14557e-10, -0.65, 0.2, 0.1, -0.35 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
flags_no_depth_test = true
flags_disable_ambient_light = true
vertex_color_use_as_albedo = true
params_cull_mode = 2
params_billboard_mode = 1
albedo_color = Color( 1, 1, 1, 0.490196 )
albedo_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=9]
size = Vector2( 3, 3 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
flags_vertex_lighting = true
flags_no_depth_test = true
flags_disable_ambient_light = true
vertex_color_use_as_albedo = true
params_cull_mode = 2
params_billboard_mode = 1
albedo_color = Color( 1, 1, 1, 0.490196 )
albedo_texture = ExtResource( 6 )

[sub_resource type="QuadMesh" id=11]
size = Vector2( 10, 10 )

[node name="Ship" type="Spatial"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Guide" type="Position3D" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Guide"]
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 13 )
far = 300.0

[node name="UI" type="MeshInstance" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.538 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null

[node name="UIViewport" type="Viewport" parent="Camera"]
size = Vector2( 1280, 720 )
transparent_bg = true
render_target_v_flip = true

[node name="UINode" parent="Camera/UIViewport" instance=ExtResource( 7 )]

[node name="ShipRef" type="Spatial" parent="."]
transform = Transform( -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 0, 0, 1, 0, 0, 5 )

[node name="AreaAim" type="Area" parent="ShipRef"]
transform = Transform( -1, 0, 0, 0, -1, 0, 0, 0, -1, 0, 0, 1 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3" type="CollisionShape" parent="ShipRef/AreaAim"]
transform = Transform( 1, -6.51682e-07, -1.4243e-14, 0, -8.74228e-08, 1, -3.25841e-07, -2, -4.37114e-08, 0, 0, 74 )
shape = SubResource( 12 )

[node name="aim_area" type="MeshInstance" parent="ShipRef/AreaAim"]
transform = Transform( 1, -3.25841e-07, 3.25841e-07, -3.25841e-07, -4.37113e-08, 1, -3.25841e-07, -1, -4.37114e-08, -17.5568, 8.78458, 25.313 )
visible = false
mesh = ExtResource( 8 )
material/0 = null

[node name="ShipBody" type="MeshInstance" parent="ShipRef"]
transform = Transform( -1, 0, 0, 0, -1, 0, 0, 0, -1, 6.51682e-08, 0.2, 1 )
mesh = ExtResource( 2 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
script = ExtResource( 4 )

[node name="MissileNozzle" type="Position3D" parent="ShipRef/ShipBody"]
transform = Transform( -1, 3.25841e-07, -8.74228e-08, 3.25841e-07, 1, 2.84859e-14, -8.74228e-08, 0, 1, 0, 0.2, 3 )

[node name="weapon_rifle_L" type="MeshInstance" parent="ShipRef/ShipBody"]
transform = Transform( -1, 3.25841e-07, -8.74228e-08, 3.25841e-07, 1, 2.84859e-14, -8.74228e-08, 0, 1, -0.771138, 0.104563, -0.382285 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="Nozzle" type="Position3D" parent="ShipRef/ShipBody/weapon_rifle_L"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0.6 )

[node name="weapon_rifle_R" type="MeshInstance" parent="ShipRef/ShipBody"]
transform = Transform( -1, 3.25841e-07, -8.74228e-08, 3.25841e-07, 1, 2.84859e-14, -8.74228e-08, 0, 1, 0.771, 0.105, -0.382 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null

[node name="Nozzle" type="Position3D" parent="ShipRef/ShipBody/weapon_rifle_R"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0.6 )

[node name="Area" type="Area" parent="ShipRef/ShipBody"]
collision_layer = 5

[node name="CollisionShape" type="CollisionShape" parent="ShipRef/ShipBody/Area"]
transform = Transform( 1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -2.61791e-08, -0.0803431, 0.0367951 )
shape = SubResource( 7 )

[node name="Trail" parent="ShipRef/ShipBody" instance=ExtResource( 3 )]

[node name="Trail2" parent="ShipRef/ShipBody" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.866581, 0.216386, -0.564658 )

[node name="Aim_near" type="MeshInstance" parent="ShipRef/ShipBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 8.2361 )
material_override = SubResource( 8 )
mesh = SubResource( 9 )
material/0 = null

[node name="Aim_far" type="MeshInstance" parent="ShipRef/ShipBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 74.9944 )
material_override = SubResource( 10 )
mesh = SubResource( 11 )
material/0 = null

[node name="Targets" type="Spatial" parent="."]
[connection signal="body_entered" from="ShipRef/AreaAim" to="." method="_on_AreaAim_body_entered"]
[connection signal="body_entered" from="ShipRef/ShipBody/Area" to="ShipRef/ShipBody" method="_on_Area_body_entered"]
[connection signal="body_exited" from="ShipRef/ShipBody/Area" to="ShipRef/ShipBody" method="_on_Area_body_exited"]
